--- a/Views/Shared/Section/FeedbackSectionPartial.cshtml
+++ b/Views/Shared/Section/FeedbackSectionPartial.cshtml
@@ -95,8 +95,7 @@
                         else { carouselItemAction = "carousel-item"; }
 
                         <div class="@carouselItemAction">
-                            <h1 class="client_text">Что говорят о нас, наши клиенты</h1>
-                            <p class="ipsum_text">Отзывы о нашей работе</p>
+                            <h1 class="client_text">Что говорят о нас наши клиенты</h1>
                             <div class="clients_section2 layout_padding">
                                 @{
                                     string clientClassPosition = "";
