--- a/Areas/Admin/Views/Owner/GetAddWorkServices.cshtml
+++ b/Areas/Admin/Views/Owner/GetAddWorkServices.cshtml
@@ -194,7 +194,7 @@
         </p2>
         <p2 class="validation_text">
             <label>Описание</label>
-            <input class="text_input_form" autocomplete="off" placeholder="Описание" name="workServicesExample.Description" value="@Model.workServicesExample!.Description" />
+            <textarea class="text_input_form" autocomplete="off" placeholder="Описание" name="workServicesExample.Description" value="@Model.workServicesExample!.Description" ></textarea>
         </p2>
         <p2 class="validation_text">
             <label>Титульная картинка</label>
