--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -1854,3 +1854,19 @@ textarea#comment::placeholder {
 
 
 
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Three columns with equal width */
+    grid-gap: 10px; /* Adjust the gap between grid items */
+}
+
+.grid-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+    .grid-item img {
+        max-width: 100%;
+        height: auto;
+    }
