переработать функционал услуг

--- a/Areas/Admin/Views/Owner/GetAddWorkServices.cshtml
+++ b/Areas/Admin/Views/Owner/GetAddWorkServices.cshtml
@@ -193,6 +193,11 @@
             <span class="error-message"></span>
         </p2>
         <p2 class="validation_text">
+            <label>Сроки</label>
+            <input class="text_input_form" autocomplete="off" placeholder="Укажите сроки" name="workServicesExample.Deadline" value="@Model.workServicesExample!.Deadline" data-rule-required="true" data-msg-required="Это поле не должно быть пустым" />
+            <span class="error-message"></span>
+        </p2>
+        <p2 class="validation_text">
             <label>Описание</label>
             <textarea class="text_input_form" autocomplete="off" placeholder="Описание" name="workServicesExample.Description" value="@Model.workServicesExample!.Description"></textarea>
         </p2>
