--- a/Views/Shared/CssPartial.cshtml
+++ b/Views/Shared/CssPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿<!-- bootstrap css -->
 <link rel="stylesheet" type="text/css" href="~/css/bootstrap.min.css" asp-append-version="true">
+<link rel="stylesheet" type="text/css" href="/css/all.min.css" asp-append-version="true"/>
 <!-- style css -->
 <link rel="stylesheet" type="text/css" href="~/css/style.css" asp-append-version="true">
 <!-- Responsive-->
