--- a/Views/Shared/HeaderPartial.cshtml
+++ b/Views/Shared/HeaderPartial.cshtml
@@ -64,7 +64,9 @@
     <div class="banner_section layout_padding">
         <div class="container">
             <div class="swiper-slide">
-                <h1 class="furniture_text text-with-background">Скидка 15% на ремонт любой сложности!</h1>
+                <p class="second_text">Получите </p>
+                <h1 class="furniture_text text-with-background">скидку 15%</h1>
+                <p class="second_text">На ремонт любой сложности</p>
                 <p class="second_text">Консультация по телефону и выезд специалиста для расчета сметы БЕСПЛАТНО!</p>
                 <p class="present_text text-with-background">Компания Эталон-ПРО работает по Краснодару и Краснодарскому Краю </p>
                 <div class="carousel_grid_container">
