динамик смена месяца в заголовке, упорядочивание списка услуг

--- a/Areas/Admin/Views/Owner/GetAddWorkServices.cshtml
+++ b/Areas/Admin/Views/Owner/GetAddWorkServices.cshtml
@@ -198,6 +198,11 @@
             <span class="error-message"></span>
         </p2>
         <p2 class="validation_text">
+            <label>Порядковый номер</label>
+            <input class="text_input_form" autocomplete="off" type="number" placeholder="Укажите порядковый номер" name="workServicesExample.DisplayOrder" value="@Model.workServicesExample!.DisplayOrder" data-rule-required="true" data-msg-required="Это поле не должно быть пустым" />
+            <span class="error-message"></span>
+        </p2>
+        <p2 class="validation_text">
             <label>Описание</label>
             <textarea class="text_input_form" autocomplete="off" placeholder="Описание" name="workServicesExample.Description" value="@Model.workServicesExample!.Description"></textarea>
         </p2>
